// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if 1 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"IfStatement\\": [
      {
        \\"name\\": \\"IfStatement\\",
        \\"children\\": {
          \\"IfToken\\": [
            {
              \\"image\\": \\"if\\",
              \\"startOffset\\": 5,
              \\"endOffset\\": 6,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 5,
              \\"endColumn\\": 6,
              \\"tokenTypeIdx\\": 29,
              \\"tokenType\\": {
                \\"name\\": \\"IfToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 29,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"LBrackets\\": [
            {
              \\"image\\": \\"(\\",
              \\"startOffset\\": 8,
              \\"endOffset\\": 8,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 8,
              \\"endColumn\\": 8,
              \\"tokenTypeIdx\\": 8,
              \\"tokenType\\": {
                \\"name\\": \\"LBrackets\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 8,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"(\\"
              }
            }
          ],
          \\"RelationExpression\\": [
            {
              \\"name\\": \\"RelationExpression\\",
              \\"children\\": {
                \\"Expression\\": [
                  {
                    \\"name\\": \\"Expression\\",
                    \\"children\\": {
                      \\"Term\\": [
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"Identifier\\": [
                                    {
                                      \\"image\\": \\"x\\",
                                      \\"startOffset\\": 9,
                                      \\"endOffset\\": 9,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 9,
                                      \\"endColumn\\": 9,
                                      \\"tokenTypeIdx\\": 7,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Identifier\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 7,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RBrackets\\": [
            {
              \\"image\\": \\")\\",
              \\"startOffset\\": 10,
              \\"endOffset\\": 10,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 10,
              \\"endColumn\\": 10,
              \\"tokenTypeIdx\\": 9,
              \\"tokenType\\": {
                \\"name\\": \\"RBrackets\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 9,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\")\\"
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 12,
              \\"endOffset\\": 12,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 12,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 10,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 10,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"BrockStatement\\": [
            {
              \\"name\\": \\"BrockStatement\\",
              \\"children\\": {
                \\"Assignment\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToRight\\": [
                        {
                          \\"name\\": \\"ToRight\\",
                          \\"children\\": {
                            \\"left\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"x\\",
                                                              \\"startOffset\\": 20,
                                                              \\"endOffset\\": 20,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 7,
                                                              \\"endColumn\\": 7,
                                                              \\"tokenTypeIdx\\": 7,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 7,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"x\\",
                                                              \\"startOffset\\": 24,
                                                              \\"endOffset\\": 24,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 11,
                                                              \\"endColumn\\": 11,
                                                              \\"tokenTypeIdx\\": 7,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 7,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"AdditionOperator\\": [
                                                {
                                                  \\"image\\": \\"+\\",
                                                  \\"startOffset\\": 22,
                                                  \\"endOffset\\": 22,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 9,
                                                  \\"endColumn\\": 9,
                                                  \\"tokenTypeIdx\\": 16,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Plus\\",
                                                    \\"PATTERN\\": {},
                                                    \\"CATEGORIES\\": [
                                                      {
                                                        \\"name\\": \\"AdditionOperator\\",
                                                        \\"PATTERN\\": {},
                                                        \\"tokenTypeIdx\\": 15,
                                                        \\"CATEGORIES\\": [],
                                                        \\"categoryMatches\\": [
                                                          16,
                                                          17
                                                        ],
                                                        \\"categoryMatchesMap\\": {
                                                          \\"16\\": true,
                                                          \\"17\\": true
                                                        },
                                                        \\"isParent\\": true
                                                      }
                                                    ],
                                                    \\"tokenTypeIdx\\": 16,
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 30,
              \\"endOffset\\": 30,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`if 2 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"IfStatement\\": [
      {
        \\"name\\": \\"IfStatement\\",
        \\"children\\": {
          \\"IfToken\\": [
            {
              \\"image\\": \\"if\\",
              \\"startOffset\\": 5,
              \\"endOffset\\": 6,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 5,
              \\"endColumn\\": 6,
              \\"tokenTypeIdx\\": 29,
              \\"tokenType\\": {
                \\"name\\": \\"IfToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 29,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"LBrackets\\": [
            {
              \\"image\\": \\"(\\",
              \\"startOffset\\": 8,
              \\"endOffset\\": 8,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 8,
              \\"endColumn\\": 8,
              \\"tokenTypeIdx\\": 8,
              \\"tokenType\\": {
                \\"name\\": \\"LBrackets\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 8,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"(\\"
              }
            }
          ],
          \\"RelationExpression\\": [
            {
              \\"name\\": \\"RelationExpression\\",
              \\"children\\": {
                \\"Expression\\": [
                  {
                    \\"name\\": \\"Expression\\",
                    \\"children\\": {
                      \\"Term\\": [
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"Identifier\\": [
                                    {
                                      \\"image\\": \\"x\\",
                                      \\"startOffset\\": 9,
                                      \\"endOffset\\": 9,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 9,
                                      \\"endColumn\\": 9,
                                      \\"tokenTypeIdx\\": 7,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Identifier\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 7,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RBrackets\\": [
            {
              \\"image\\": \\")\\",
              \\"startOffset\\": 10,
              \\"endOffset\\": 10,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 10,
              \\"endColumn\\": 10,
              \\"tokenTypeIdx\\": 9,
              \\"tokenType\\": {
                \\"name\\": \\"RBrackets\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 9,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\")\\"
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 12,
              \\"endOffset\\": 12,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 12,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 10,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 10,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            },
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 37,
              \\"endOffset\\": 37,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 12,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 10,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 10,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"BrockStatement\\": [
            {
              \\"name\\": \\"BrockStatement\\",
              \\"children\\": {
                \\"Assignment\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToRight\\": [
                        {
                          \\"name\\": \\"ToRight\\",
                          \\"children\\": {
                            \\"left\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"x\\",
                                                              \\"startOffset\\": 20,
                                                              \\"endOffset\\": 20,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 7,
                                                              \\"endColumn\\": 7,
                                                              \\"tokenTypeIdx\\": 7,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 7,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"x\\",
                                                              \\"startOffset\\": 24,
                                                              \\"endOffset\\": 24,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 11,
                                                              \\"endColumn\\": 11,
                                                              \\"tokenTypeIdx\\": 7,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 7,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"AdditionOperator\\": [
                                                {
                                                  \\"image\\": \\"+\\",
                                                  \\"startOffset\\": 22,
                                                  \\"endOffset\\": 22,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 9,
                                                  \\"endColumn\\": 9,
                                                  \\"tokenTypeIdx\\": 16,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Plus\\",
                                                    \\"PATTERN\\": {},
                                                    \\"CATEGORIES\\": [
                                                      {
                                                        \\"name\\": \\"AdditionOperator\\",
                                                        \\"PATTERN\\": {},
                                                        \\"tokenTypeIdx\\": 15,
                                                        \\"CATEGORIES\\": [],
                                                        \\"categoryMatches\\": [
                                                          16,
                                                          17
                                                        ],
                                                        \\"categoryMatchesMap\\": {
                                                          \\"16\\": true,
                                                          \\"17\\": true
                                                        },
                                                        \\"isParent\\": true
                                                      }
                                                    ],
                                                    \\"tokenTypeIdx\\": 16,
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            },
            {
              \\"name\\": \\"BrockStatement\\",
              \\"children\\": {
                \\"Assignment\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToRight\\": [
                        {
                          \\"name\\": \\"ToRight\\",
                          \\"children\\": {
                            \\"left\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"x\\",
                                                              \\"startOffset\\": 45,
                                                              \\"endOffset\\": 45,
                                                              \\"startLine\\": 5,
                                                              \\"endLine\\": 5,
                                                              \\"startColumn\\": 7,
                                                              \\"endColumn\\": 7,
                                                              \\"tokenTypeIdx\\": 7,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 7,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"x\\",
                                                              \\"startOffset\\": 49,
                                                              \\"endOffset\\": 49,
                                                              \\"startLine\\": 5,
                                                              \\"endLine\\": 5,
                                                              \\"startColumn\\": 11,
                                                              \\"endColumn\\": 11,
                                                              \\"tokenTypeIdx\\": 7,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 7,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"AdditionOperator\\": [
                                                {
                                                  \\"image\\": \\"-\\",
                                                  \\"startOffset\\": 47,
                                                  \\"endOffset\\": 47,
                                                  \\"startLine\\": 5,
                                                  \\"endLine\\": 5,
                                                  \\"startColumn\\": 9,
                                                  \\"endColumn\\": 9,
                                                  \\"tokenTypeIdx\\": 17,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Minus\\",
                                                    \\"PATTERN\\": {},
                                                    \\"CATEGORIES\\": [
                                                      {
                                                        \\"name\\": \\"AdditionOperator\\",
                                                        \\"PATTERN\\": {},
                                                        \\"tokenTypeIdx\\": 15,
                                                        \\"CATEGORIES\\": [],
                                                        \\"categoryMatches\\": [
                                                          16,
                                                          17
                                                        ],
                                                        \\"categoryMatchesMap\\": {
                                                          \\"16\\": true,
                                                          \\"17\\": true
                                                        },
                                                        \\"isParent\\": true
                                                      }
                                                    ],
                                                    \\"tokenTypeIdx\\": 17,
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 30,
              \\"endOffset\\": 30,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            },
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 55,
              \\"endOffset\\": 55,
              \\"startLine\\": 6,
              \\"endLine\\": 6,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ],
          \\"ElseToken\\": [
            {
              \\"image\\": \\"else\\",
              \\"startOffset\\": 32,
              \\"endOffset\\": 35,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 7,
              \\"endColumn\\": 10,
              \\"tokenTypeIdx\\": 30,
              \\"tokenType\\": {
                \\"name\\": \\"ElseToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 30,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
